test/domains/compilerErrors/illegal-rank.chpl

writeln({1..5, 2..5}.indexOrder(3));
