test/domains/compilerErrors/illegal-rank.good
illegal-rank.chpl:2: warning: index is of type int(64)
illegal-rank.chpl:2: error: rank of the index must match domain rank
